--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,35 +1,35 @@
 .myContainer {
-    /*width: 80%;
-    height: 65%;*/
-    margin: 2% 5%;
+    width: 100%;
+    height: 97%;
+    margin: 0;
     border: 5px solid #696969;
 }
 
 h1 { 
     font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif; 
-    font-size: 24px; 
+    font-size: xx-large; 
     font-style: normal; 
     font-variant: normal; 
     font-weight: 700; 
-    line-height: 26.4px; 
+    line-height: normal; 
 } 
 
 h3 { 
     font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;
-    font-size: 14px; 
+    font-size: x-large; 
     font-style: normal; 
     font-variant: normal; 
     font-weight: 700; 
-    line-height: 15.4px; 
+    line-height: normal; 
 } 
 
 p { 
     font-family: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif; 
-    font-size: 14px; 
+    font-size: medium; 
     font-style: normal; 
     font-variant: normal; 
     font-weight: 400; 
-    line-height: 20px; 
+    line-height: normal; 
 } 
 
 blockquote { 
