--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,8 +18,8 @@
     <div class="modal-body">
         <app-login #myLogin></app-login>
     </div>
-    <!--<div class="modal-footer">
+    <div class="modal-footer">
         <button [disabled]="loading" type="button" class="btn btn-success" (click)="onLogin(myLogin)">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Login</button>
-    </div>-->
+    </div>
 </ng-template>
