--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,21 +5,37 @@
 
     <div>
         <button class="btn btn-primary" (click)="open(myModal)">Begin</button>
+        <button class="btn btn-success" (click)="open(myRegister)">Execute</button>
     </div>
 </div>
 
 <ng-template #myModal let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">Bootstrap Modal</h4>
+        <h4 class="modal-title" id="modal-basic-title">Login Modal</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">×</span>
           </button>
     </div>
     <div class="modal-body">
-        <app-login #myLogin></app-login>
+        <app-login (loginFunction)="loginFunction($event)"></app-login>
     </div>
     <div class="modal-footer">
-        <button [disabled]="loading" type="button" class="btn btn-success" (click)="onLogin(myLogin)">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Login</button>
+        <p>brought to you by Keoagile Motlhale</p>
     </div>
 </ng-template>
+
+<ng-template #myRegister let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title">Register Modal</h4>
+        <button type="button" class="close" aria-label="Close"(click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">x</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <app-register (registerFunction)="registerFunction()"></app-register>
+    </div>
+    <div class="modal-footer">
+        <p>brought to you by Keoagile Motlhale</p>
+    </div>
+</ng-template>
+
