--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,4 @@
 <p>register works!</p>
+<button [disabled]="loading" type="button" class="btn btn-primary" (click)="onRegister()">
+    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Register
+</button>
