--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,4 +1,7 @@
 <p>register works!</p>
-<button [disabled]="loading" type="button" class="btn btn-primary" (click)="onRegister()">
-    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Register
-</button>
+<div>
+    
+    <button [disabled]="loading" type="button" class="btn btn-primary" (click)="onRegister()">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Next
+    </button>
+</div>
