--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,9 @@
-<p>register works!</p>
-<div>
-    
-    <button [disabled]="loading" type="button" class="btn btn-primary" (click)="onRegister()">
-        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Next
-    </button>
+<div class="myContainer">
+    <p>register works!</p>
+    <div>
+        
+        <button [disabled]="loading" type="button" class="btn btn-primary" (click)="onRegister()">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Next
+        </button>
+    </div>
 </div>
