--- a/src/app/components/register-pg3/register-pg3.component.html
+++ b/src/app/components/register-pg3/register-pg3.component.html
@@ -1,9 +1,8 @@
 <div class="myContainer">
-    <p>register-pg3 works!</p>
-    <div>
-        
-        <button [disabled]="loading" type="button" class="btn btn-primary" (click)="onNext()">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Next
-        </button>
-    </div>
+    <p>Login as the first User</p>  
+</div>
+<div>
+    <button [disabled]="loading" type="button" class="btn btn-primary" (click)="onNext()">
+        <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>Next
+    </button>
 </div>
