--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <h3>Begin...</h3>
     <p>Welcome, welcome, well...come in. Let's begin, I'm calling for a truce. See I'd very much like for the process to stop... doing what it's doing. I'd very much like that alot. So what can the transistor do? Well...it can build a bridge</p>
 
-    <div  class="flex-container">
+    <div  [ngClass]="theme">
         <div *ngFor="let cal of fakecalender" >
             <div style="width: 250px;">
                 <label>{{cal.day}} {{cal.month}} {{cal.year}}</label> <br/>
@@ -13,11 +13,13 @@
     </div>
 
     <div>
+        <input type="text" disabled [value]="text"/>
+        <input type="text" disabled value="{{text}}"/>
         <button class="btn btn-primary" (click)="open(myModal)">Begin</button>
         <button class="btn btn-success" (click)="open(myRegister)">Execute</button>
+        <button class="btn btn-warning" (click)="changeText()"> Property Binding</button>
     </div>
 </div>
-
 <ng-template #myModal let-modal>
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Login Modal</h4>
